--- a/index.html
+++ b/index.html
@@ -6,5 +6,7 @@
   <body>
 Meu primeiro projeto<br>
 Meu nome é <b>Jacson Luiz</b>
+<br>Vou continuar a branch master como minha pagina unica....
+<br>Meu entendimento de git e github melhorou muito!
   </body>
 </html>
